// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DinoGame Snapshots > matches snapshot for game over state 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ HI 00000 00090                                                              Press Ctrl+C to quit │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                    ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ │
│                                                  ▗██████████████████████████████████████████████ │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│           ▗████▖                                                                                 │
│           ▐▙███▌                                                                                 │
│           ▐██▀▀▘                                                                                 │
│      ▗    ▟█▛▀▘                                                                                  │
│      ▐▖ ▗███▙▖                                                                                   │
│      ▐█▄████▌▘                                                                                   │
│  ▖ ▗ ▝██████▌ ▖ ▗  ▖ ▗  ▖  ▖ ▗  ▖ ▗  ▖  ▖ ▗  ▖ ▗  ▖ ▗  ▗  ▖ ▗  ▖ ▗  ▗  ▖ ▗  ▖ ▗  ▖  ▖ ▗  ▖ ▗  ▖  │
│ ▐▌ █ ▐▛█████ ▐▌ █ ▐▌ █ ▐▌ ▐▌ █ ▐▌ █ ▐▌ ▐▌ █ ▐▌ █ ▐▌ █  █ ▐▌ █ ▐▌ █  █ ▐▌ █ ▐▌ █ ▐▌ ▐▌ █ ▐▌ █ ▐▌  │
│ ██▐█▌██▐█▛▜█▌██▐█▌██▐█▌██ ██▐█▌██▐█▌██ ██▐█▌██▐█▌██▐█▌▐█▌██▐█▌██▐█▌▐█▌██▐█▌██▐█▌██ ██▐█▌██▐█▌██  │
│ ▜█▛██▜█▛██▀██▜█▛██▜█▛██▜█▛▜█▛██▜█▛██▜█▛▜█▛██▜█▛██▜█▛██▀██▜█▛██▜█▛██▀██▜█▛██▜█▛██▜█▛▜█▛██▜█▛██▜█▛ │
│  ▌ ▐  ▌ ▜  ▐  ▌ ▐  ▌ ▐  ▌  ▌ ▐  ▌ ▐  ▌  ▌ ▐  ▌ ▐  ▌ ▐  ▐  ▌ ▐  ▌ ▐  ▐  ▌ ▐  ▌ ▐  ▌  ▌ ▐  ▌ ▐  ▌  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DinoGame Snapshots > matches snapshot for initial state 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ HI 00000 00000                                                              Press Ctrl+C to quit │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│           ▗████▖                                                                                 │
│           ▐▙███▌                                                                                 │
│           ▐██▀▀▘                       Press Space to Play                                       │
│      ▗    ▟█▛▀▘                                                                                  │
│      ▐▖ ▗███▙▖                                                                                   │
│      ▐█▄████▌▘                                                                                   │
│      ▝██████▌                                                                                    │
│       ▝████▛                                                                                     │
│        ▝█▛█                                                                                      │
│ ▀▀▀▀▀▀▀▀▛▀▜▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀ │
│         ▀ ▝▘                                                                                     │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DinoGame Snapshots > matches snapshot while playing 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ HI 00000 00015                                                              Press Ctrl+C to quit │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│           ▗████▖                                                                                 │
│           ▐▙███▌                                                                                 │
│           ▐██▀▀▘                                                                                 │
│      ▗    ▟█▛▀▘                                                                                  │
│      ▐▖ ▗███▙▖                                                                                   │
│      ▐█▄████▌▘                                                                                   │
│      ▝██████▌                                                                                    │
│       ▝████▛                                                                                     │
│        ▝█▀█                                                                                      │
│ ▀▀▀▀▀▀▀▀▀▀▜▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀ │
│           ▝▘                                                                                     │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
